--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#cta">Download</a></li>
                 <li><a href="#" id="loginBtn" class="auth-btn">Login</a></li>
+                <li><a href="#" id="logoutBtn" style="display: none;">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -143,7 +144,9 @@
     <!-- Auth Modals -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
+            <button class="close-button" id="closeLoginModal">&times;</button>
             <h2>Login</h2>
+            <div id="authError" class="error-message"></div>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="loginEmail">Email</label>
@@ -154,13 +157,16 @@
                     <input type="password" id="loginPassword" required>
                 </div>
                 <button type="submit" class="cta-button">Login</button>
+                <p class="auth-switch">Don't have an account? <a href="#" id="switchToSignup">Sign Up</a></p>
             </form>
         </div>
     </div>
 
     <div id="signupModal" class="modal">
         <div class="modal-content">
+            <button class="close-button" id="closeSignupModal">&times;</button>
             <h2>Sign Up</h2>
+            <div id="authError" class="error-message"></div>
             <form id="signupForm">
                 <div class="form-group">
                     <label for="signupEmail">Email</label>
@@ -168,9 +174,10 @@
                 </div>
                 <div class="form-group">
                     <label for="signupPassword">Password</label>
-                    <input type="password" id="signupPassword" required>
+                    <input type="password" id="signupPassword" required minlength="6">
                 </div>
                 <button type="submit" class="cta-button">Sign Up</button>
+                <p class="auth-switch">Already have an account? <a href="#" id="switchToLogin">Login</a></p>
             </form>
         </div>
     </div>
