--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextStep AI - Transform Your Content with AI</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <!-- Load Supabase with a specific version -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -17,7 +18,9 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#cta">Download</a></li>
                 <li><a href="#" id="loginBtn" class="auth-btn">Login</a></li>
-                <li><a href="#" id="logoutBtn" style="display: none;">Logout</a></li>
+                <li><a href="#" id="navSignupBtn" class="auth-btn highlight">Sign Up</a></li>
+                <li><a href="#" id="logoutBtn" class="auth-btn" style="display: none;">Logout</a></li>
+                <li><span id="userEmail" class="user-email" style="display: none;"></span></li>
             </ul>
         </div>
     </nav>
@@ -29,13 +32,15 @@
             <div class="container">
                 <h1>Transform Your Content with AI</h1>
                 <p>Create engaging, high-quality content in minutes with our advanced AI technology. Say goodbye to writer's block and hello to consistent, compelling content that drives results.</p>
-                <button class="cta-button" id="signupBtn">Get Started</button>
+                <div class="hero-buttons">
+                    <button class="cta-button primary" id="signupBtn">Get Started Free</button>
+                    <button class="cta-button secondary" id="learnMoreBtn">Learn More</button>
+                </div>
             </div>
         </section>
 
         <!-- Features Section -->
         <section id="features" class="features">
-            <!-- Feature 1 -->
             <div class="feature-container">
                 <div class="feature-image">
                     <img src="images/feature1.jpg" alt="Smart Content Generation">
@@ -46,7 +51,6 @@
                 </div>
             </div>
 
-            <!-- Feature 2 -->
             <div class="feature-container reverse">
                 <div class="feature-text">
                     <h2>SEO Optimization</h2>
@@ -57,7 +61,6 @@
                 </div>
             </div>
 
-            <!-- Feature 3 -->
             <div class="feature-container">
                 <div class="feature-image">
                     <img src="images/feature3.jpg" alt="Analytics Dashboard">
@@ -74,7 +77,7 @@
             <div class="container">
                 <h2>Ready for your NextStep in Content Game?</h2>
                 <p>Join thousands of content creators who have already transformed their content strategy with NextStep AI.</p>
-                <button class="cta-button">Download Now</button>
+                <button class="cta-button" id="ctaSignupBtn">Get Started Now</button>
                 <div class="trust-elements">
                     <div class="trust-item">
                         <span class="number">4.9★</span>
@@ -94,9 +97,10 @@
     </div>
 
     <!-- Dashboard -->
-    <div id="dashboard" class="dashboard">
+    <div id="dashboard" class="dashboard" style="display: none;">
         <div class="container">
             <h2>Welcome to Your Dashboard</h2>
+            <p id="welcomeMessage"></p>
             <div class="content-form">
                 <h3>Create New Content</h3>
                 <form id="contentForm">
@@ -134,9 +138,7 @@
                     <button type="submit" class="cta-button">Generate Content</button>
                 </form>
 
-                <div id="generatedContent" class="generated-content">
-                    <!-- Generated content will appear here -->
-                </div>
+                <div id="generatedContent" class="generated-content"></div>
             </div>
         </div>
     </div>
@@ -146,7 +148,7 @@
         <div class="modal-content">
             <button class="close-button" id="closeLoginModal">&times;</button>
             <h2>Login</h2>
-            <div id="authError" class="error-message"></div>
+            <div id="loginError" class="error-message"></div>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="loginEmail">Email</label>
@@ -154,7 +156,7 @@
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
-                    <input type="password" id="loginPassword" required>
+                    <input type="password" id="loginPassword" required minlength="6">
                 </div>
                 <button type="submit" class="cta-button">Login</button>
                 <p class="auth-switch">Don't have an account? <a href="#" id="switchToSignup">Sign Up</a></p>
@@ -166,7 +168,7 @@
         <div class="modal-content">
             <button class="close-button" id="closeSignupModal">&times;</button>
             <h2>Sign Up</h2>
-            <div id="authError" class="error-message"></div>
+            <div id="signupError" class="error-message"></div>
             <form id="signupForm">
                 <div class="form-group">
                     <label for="signupEmail">Email</label>
@@ -175,6 +177,7 @@
                 <div class="form-group">
                     <label for="signupPassword">Password</label>
                     <input type="password" id="signupPassword" required minlength="6">
+                    <small class="password-hint">Password must be at least 6 characters long</small>
                 </div>
                 <button type="submit" class="cta-button">Sign Up</button>
                 <p class="auth-switch">Already have an account? <a href="#" id="switchToLogin">Login</a></p>
@@ -182,6 +185,34 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Loading Spinner -->
+    <div id="loadingSpinner" class="loading-spinner" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
+    <!-- Toast Messages -->
+    <div id="toastContainer" class="toast-container"></div>
+
+    <!-- Scripts -->
+    <script type="module" src="config.js"></script>
+    <script type="module" src="auth.js"></script>
+    <script type="module" src="script.js"></script>
+
+    <!-- Initialize auth -->
+    <script type="module">
+        import { initializeAuth } from './auth.js';
+        
+        // Wait for DOM to be ready
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('DOM loaded, initializing auth...');
+            initializeAuth().catch(console.error);
+        });
+
+        // Global error handler
+        window.addEventListener('unhandledrejection', function(event) {
+            console.error('Unhandled promise rejection:', event.reason);
+            alert('An unexpected error occurred. Please try again or contact support.');
+        });
+    </script>
 </body>
 </html> 
